try out WebSocket

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,7 +1,7 @@
-@(message: String)
+@main {
 
-@main("Welcome to Play") {
+    <h1> Twitter Poetry </h1>
 
-    @play20.welcome(message)
+    <p id="quotation"></p>
 
 }
