add some design

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,7 +1,10 @@
 @main {
 
-    <h1> Twitter Poetry </h1>
-
-    <p id="quotation"></p>
+    <div id="quotation">"Try not to become a man of success but rather a man of value"</div>
+    <div id="author"> - Albert Einstein </div>
+    <div id="twitterInfo">
+        <span> Shared by @@BGuigal </span>
+        <span> on March 1 2014 at 18:30:24</span>
+    </div>
 
 }
