Streaming of quotations using a websocket

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,10 +1,10 @@
 @main {
 
-    <div id="quotation">"Try not to become a man of success but rather a man of value"</div>
-    <div id="author"> - Albert Einstein </div>
+    <div id="quotation"></div>
+    <div id="author"> </div>
     <div id="twitterInfo">
-        <span> Shared by @@BGuigal </span>
-        <span> on March 1 2014 at 18:30:24</span>
+        <p> Shared by <span id="user"></span></p>
+        <p> on <span id="date"></span></p>
     </div>
 
 }
