--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,7 +1,7 @@
 @main {
 
-    <div id="quotation"></div>
-    <div id="author"> </div>
+    <div id="quotation">Try not to become a man of success but rather to become a man of value</div>
+    <div id="author">Albert Einstein</div>
     <div id="twitterInfo">
         <p> Shared by <span id="user"></span></p>
         <p> on <span id="date"></span></p>
