some css style improvement + Google Analytics support

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,7 +1,9 @@
 html, body {
   font-family: "HelveticaNeue-Light", Helvetica, sans-serif;
   background-color: #dcdcdc;
-  padding: 100px;
+  padding-left: 100px;
+  padding-right: 100px;
+  padding-top: 50px;
 }
 
 #quotation {
