--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -3,8 +3,8 @@
     <div id="quotation"></div>
     <div id="author"></div>
     <div id="twitterInfo">
-        <p> Shared by <span id="user"></span></p>
-        <p> on <span id="date"></span></p>
+        <p><span id="user"></span></p>
+        <p><span id="date"></span></p>
     </div>
 
 }
