--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,10 +1,28 @@
 @main {
 
-    <div id="quotation"></div>
-    <div id="author"></div>
-    <div id="twitterInfo">
-        <p><span id="user"></span></p>
-        <p><span id="date"></span></p>
-    </div>
+    <div class="wrap">
+
+    	<div class="container">
+	  		<div class="units-row">      
+		        <div class="unit-70 quotation-content" >
+	        		<p id="quotation"></p>
+	        		<p id="author"></p>
+		        </div>
+		    	<div class="unit-30 user-content">
+		    		<div class="units-row">
+		    			<div class="unit-20">
+		    				<div id="profile" class="circular"></div>
+		    			</div>
+	    				<div class="unit-80 user">
+		    				<span id="name"></span>
+		    				<span id="screenName"></span>
+		    				<p><a id="original-tweet" href=""></a></p>
+	    				</div>
+	    			</div>
+		    	</div>
+		 	</div>
+	 	</div>
+
+	</div>
 
 }
