--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -6,9 +6,10 @@
     <head>
         <title>Twitter Poetry</title>
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/kube.min.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.ico")">
         <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
-        <script type="text/javascript" charset="utf-8" src="assets/javascripts/main.js"></script>
+        <script type="text/javascript" src="@routes.Assets.at("javascripts/main.js")"></script>
         <script>
           (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
           (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
