Quotation takes a list of statuses

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -5,7 +5,7 @@
     	<div class="container">
 	  		<div class="units-row">      
 		        <div class="unit-70 quotation-content" >
-	        		<p id="quotation"></p>
+	        		<p id="quote"></p>
 	        		<p id="author"></p>
 		        </div>
 		    	<div class="unit-30 user-content">
