--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -19,9 +19,14 @@
 		    				<p><a id="original-tweet" href=""></a></p>
 	    				</div>
 	    			</div>
+                    <div class="units-row">
+                        <a href="share" id="tweet-something"></a>
+                    </div>
 		    	</div>
 		 	</div>
 	 	</div>
+
+
 
 	</div>
 
