--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -59,3 +59,9 @@ html, body {
   color: #a2a19f;
   text-decoration: underline;
 }
+
+#tweet-something {
+    color: #a2a19f;
+    font-size: 150%;
+
+}
