back to play template engine

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,4 +1,4 @@
-html, body, .view {
+html, body {
   font-family: 'Buenard', 'HelveticaNeue-Light', Helvetica, sans-serif;
   background-color: rgb(246,245,241);
   height:100%;
