--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,20 +1,18 @@
+@(content: Html)
+
 <!DOCTYPE html>
-<html ng-app="myApp">
+<html>
 <head lang="en">
     <meta charset="UTF-8">
     <meta name="description" content="A Twitter-sourced stream of quotes from famous authors">
     <meta name="keywords" content="quotes, Twitter, author, stream">
     <meta name="Author" CONTENT="Benoît Guigal">
     <title>Twitter Poetry</title>
-    <link rel="shortcut icon" type="image/png" href="img/favicon.ico">
-    <link rel="stylesheet" media="screen" href="css/kube.min.css">
-    <link rel="stylesheet" media="screen" href="css/main.css">
+    <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("img/favicon.ico")">
+    <link rel="stylesheet" media="screen" href="@routes.Assets.at("css/kube.min.css")">
+    <link rel="stylesheet" media="screen" href="@routes.Assets.at("css/main.css")">
     <link href='http://fonts.googleapis.com/css?family=Buenard:400' rel='stylesheet' type='text/css'>
-    <script src="js/jquery-1.9.0.min.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.14/angular.min.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.14/angular-route.min.js"></script>
-    <script src="js/app.js"></script>
-    <script src="js/controllers.js"></script>
+    <script src="@routes.Assets.at("js/jquery-1.9.0.min.js")"></script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -27,6 +25,6 @@
 
 </head>
 <body>
-    <div ng-view class="view"></div>
+    @content
 </body>
 </html>
