--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" media="screen" href="@routes.Assets.at("css/kube.min.css")">
     <link rel="stylesheet" media="screen" href="@routes.Assets.at("css/main.css")">
     <link href='http://fonts.googleapis.com/css?family=Buenard:400' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="@routes.Assets.at("css/fontello.css")">
+    <link rel="stylesheet" href="@routes.Assets.at("css/animation.css")">
     <script src="@routes.Assets.at("js/jquery-1.9.0.min.js")"></script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
