--- a/public/css/main.css
+++ b/public/css/main.css
@@ -20,9 +20,6 @@ html, body {
   padding-right: 15px;
 }
 
-.quotation-content p {
-  margin-bottom:10px;
-}
 
 .container {
    display: table-cell; 
@@ -33,10 +30,18 @@ html, body {
 .quote {
   font-size: 200%;
   font-weight: 400;
+  line-height: 150%;
+  margin-bottom: 10px;
 }
 
 .author {
-	font-size: 110%;
+    font-size: 110%;
+      margin-bottom: 10px;
+}
+
+.icon-twitter-1 {
+    font-size:150%;
+    color: #a2a19f;
 }
 
 .circular {
