--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -21,8 +21,9 @@
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-      ga('create', 'UA-47110116-2', 'thewisdomoftwitter.com');
+      ga('create', 'UA-47110116-2', 'twisdom.li');
       ga('send', 'pageview');
+
     </script>
 
 </head>
