change favicon and title

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -4,11 +4,11 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <meta name="description" content="A Twitter-sourced stream of quotes from famous authors">
-    <meta name="keywords" content="quotes, Twitter, author, stream">
+    <meta name="description" content="A Twitter-sourced stream of quotations">
+    <meta name="keywords" content="quotes, Twitter, author, stream, crowd-sourcing, inspiration">
     <meta name="Author" CONTENT="Benoît Guigal">
-    <title>Twitter Poetry</title>
-    <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("img/favicon.ico")">
+    <title>Your daily dose of Twitter inspiration</title>
+    <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("img/favicon_2.ico")">
     <link rel="stylesheet" media="screen" href="@routes.Assets.at("css/kube.min.css")">
     <link rel="stylesheet" media="screen" href="@routes.Assets.at("css/main.css")">
     <link href='http://fonts.googleapis.com/css?family=Buenard:400' rel='stylesheet' type='text/css'>
