--- a/app/views/stream.scala.html
+++ b/app/views/stream.scala.html
@@ -14,7 +14,7 @@
 
     var lastQuote = "";
 
-    updateView("@quotation.quote", "@quotation.author.displayableName", "@status.user.imageUrl", "@status.user.name", "@@@status.user.screenName", "@status.createdAt", "@status.user.id")
+    updateView("@quotation.quote", "@quotation.author.displayableName", "@status.user.imageUrl", "@status.user.name", "@status.user.screenName", "@status.createdAt", "@status.user.id")
 
     var ws = new WebSocket("@routes.Application.stream.webSocketURL()");
 
