button retweet and locale date format

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -4,10 +4,10 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <meta name="description" content="A Twitter-sourced stream of quotations">
+    <meta name="description" content="A Twitter-sourced quotations tream">
     <meta name="keywords" content="quotes, Twitter, author, stream, crowd-sourcing, inspiration">
     <meta name="Author" CONTENT="Benoît Guigal">
-    <title>Your daily dose of Twitter inspiration</title>
+    <title>Your daily dose of inspiration</title>
     <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("img/favicon_2.ico")">
     <link rel="stylesheet" media="screen" href="@routes.Assets.at("css/kube.min.css")">
     <link rel="stylesheet" media="screen" href="@routes.Assets.at("css/main.css")">
