--- a/public/css/fontello.css
+++ b/public/css/fontello.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?71353891');
-  src: url('../font/fontello.eot?71353891#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff?71353891') format('woff'),
-       url('../font/fontello.ttf?71353891') format('truetype'),
-       url('../font/fontello.svg?71353891#fontello') format('svg');
+  src: url('../font/fontello.eot?1771288');
+  src: url('../font/fontello.eot?1771288#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff?1771288') format('woff'),
+       url('../font/fontello.ttf?1771288') format('truetype'),
+       url('../font/fontello.svg?1771288#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,7 +14,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?71353891#fontello') format('svg');
+    src: url('../font/fontello.svg?1771288#fontello') format('svg');
   }
 }
 */
@@ -55,3 +55,4 @@
 .icon-cancel:before { content: '\e804'; } /* '' */
 .icon-github:before { content: '\e802'; } /* '' */
 .icon-github-circled-alt2:before { content: '\e803'; } /* '' */
+.icon-retweet:before { content: '\e805'; } /* '' */
