--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -41,10 +41,10 @@
 
 <div class="overlay">
     <div class="overlay-wrap">
-        <p>A Twitter-sourced quotations stream built on top of <a href="https://dev.twitter.com/docs/api/streaming">Twitter API</a> and the <a href="http://www.playframework.com/">Play Framework</a></p>
+        <p>twisdom.li is a Twitter-sourced quotations stream built on top of <a href="https://dev.twitter.com/docs/api/streaming">Twitter API</a> and the <a href="http://www.playframework.com/">Play Framework</a></p>
         <p>Concept and code by <a href="http://benoitguigal.me">@@BGuigal</a></p>
         <p>Fork this project on <a href="https://github.com/benoitguigal/twisdom">Github</a></p>
-        <p class="spread">Spread the word <i class="icon-twitter"></i><p>
+        <p class="spread">Spread the wisdom...<a href="https://twitter.com/intent/tweet?text=Looking for inspiration ? Discover the quotations that are buzzing right now: http://twisdom.li"><i class="icon-twitter-1"></i></a><p>
     </div>
 </div>
     @content
