--- a/public/css/main.css
+++ b/public/css/main.css
@@ -22,6 +22,10 @@ a:hover {
  color: #000;
 }
 
+.icon-menu:hover {
+ color: #998100;
+}
+
 .icon-cancel {
  color: #fff;
 }
@@ -35,25 +39,27 @@ a:hover {
  height: 100%;
  width: 100%;
  background: rgba(0, 0, 0, 0.94);
-}
-
-.overlay-wrap{
- color: #fff;
- max-width: 1100px;
- margin: 80px;
  display:table;
- padding-top: 60px;
- font-weight:200;
- font-size: 200%;
- letter-spacing:3px;
+ text-align:center;
 }
 
-.overlay-wrap a {
+.overlay-wrapper {
+  display:table-cell;
+  vertical-align:middle;
+}
+
+.info {
+  font-size:180%;
+  line-height:50px;
+  color: #fff;
+}
+
+.info a {
  text-decoration: none;
  color: #998100;
 }
 
-.overlay a:hover {
+.info a:hover {
  color: #fff;
  text-decoration: underline;
 }
@@ -70,7 +76,7 @@ a:hover {
   height:100%;
   margin-left:15%;
   margin-right:5%;
-  padding-top:50px;
+  padding-top:80px;
 }
 
 .quotation-content {
