bootstrap.css instead of kube.css

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -9,12 +9,13 @@
     <meta name="Author" CONTENT="Benoît Guigal">
     <title>Your daily dose of inspiration</title>
     <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("img/favicon_2.ico")">
-    <link rel="stylesheet" media="screen" href="@routes.Assets.at("css/kube.min.css")">
+    <link rel="stylesheet" media="screen" href="@routes.Assets.at("css/bootstrap.min.css")">
     <link rel="stylesheet" media="screen" href="@routes.Assets.at("css/main.css")">
     <link href='http://fonts.googleapis.com/css?family=Buenard:400' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="@routes.Assets.at("css/fontello.css")">
     <link rel="stylesheet" href="@routes.Assets.at("css/animation.css")">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src="@routes.Assets.at("js/bootstrap.min.js")"></script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -29,7 +30,7 @@
 </head>
 <body>
 <header>
-    <nav>
+    <nav class="navbar navbar-fixed-top">
         <div class="button">
             <a href="#">
                 <i class="btn-open icon-menu"></i>
