--- a/public/css/fontello.css
+++ b/public/css/fontello.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?1771288');
-  src: url('../font/fontello.eot?1771288#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff?1771288') format('woff'),
-       url('../font/fontello.ttf?1771288') format('truetype'),
-       url('../font/fontello.svg?1771288#fontello') format('svg');
+  src: url('../fonts/fontello.eot?1771288');
+  src: url('../fonts/fontello.eot?1771288#iefix') format('embedded-opentype'),
+       url('../fonts/fontello.woff?1771288') format('woff'),
+       url('../fonts/fontello.ttf?1771288') format('truetype'),
+       url('../fonts/fontello.svg?1771288#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
